--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-_tflow_select=2.1.0=gpu
+#_tflow_select=2.1.0=gpu
 absl-py=0.8.1=py36_0
 astor=0.8.0=py36_0
 backcall=0.1.0=py36_0
