--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-#_tflow_select=2.1.0=gpu
-absl-py=0.8.1=py36_0
-astor=0.8.0=py36_0
+_tflow_select==2.1.0
+absl-py==0.8.1
+astor==0.8.0
 backcall=0.1.0=py36_0
 blas=1.0=mkl
 ca-certificates=2019.11.27=0
