--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
-# platform: win-64
-_tflow_select==2.1.0
-absl-py==0.8.1
-astor==0.8.0
-backcall=0.1.0=py36_0
-blas=1.0=mkl
-ca-certificates=2019.11.27=0
-certifi=2019.11.28=py36_0
-colorama=0.4.3=py_0
-cudatoolkit=10.0.130=0
-cudnn=7.6.5=cuda10.0_0
-decorator=4.4.1=py_0
-gast=0.2.2=py36_0
-google-pasta=0.1.8=py_0
-grpcio=1.16.1=py36h351948d_1
-h5py=2.9.0=py36h5e291fa_0
-hdf5=1.10.4=h7ebc959_0
-icc_rt=2019.0.0=h0cc432a_1
-intel-openmp=2019.4=245
-ipykernel=5.1.3=py36h39e3cac_1
-ipython=7.11.1=py36h39e3cac_0
-ipython_genutils=0.2.0=py36h3c5d0ee_0
-jedi=0.15.2=py36_0
-jupyter_client=5.3.4=py36_0
-jupyter_core=4.6.1=py36_0
-keras=2.2.4=0
-keras-applications=1.0.8=py_0
-keras-base=2.2.4=py36_0
-keras-preprocessing=1.1.0=py_1
-libprotobuf=3.8.0=h7bd577a_0
-libsodium=1.0.16=h9d3ae62_0
-markdown=3.1.1=py36_0
-mkl=2019.4=245
-mkl-service=2.0.2=py36he774522_0
-mkl_fft=1.0.14=py36h14836fe_0
-mkl_random=1.0.2=py36h343c172_0
-numpy=1.16.4=py36h19fb1c0_0
-numpy-base=1.16.4=py36hc3f5095_0
-openssl=1.1.1d=he774522_3
-opt_einsum=3.1.0=py_0
-pandas=0.25.3=py36ha925a31_0
-parso=0.5.2=py_0
-pickleshare=0.7.5=py36_0
-pip=19.3.1=py36_0
-prompt_toolkit=3.0.2=py_0
-protobuf=3.8.0=py36h33f27b4_0
-pygments=2.5.2=py_0
-pyreadline=2.1=py36_1
-python=3.6.9=h5500b2f_0
-python-dateutil=2.8.1=py_0
-pytz=2019.3=py_0
-pywin32=223=py36hfa6e2cd_1
-pyyaml=5.2=py36he774522_0
-pyzmq=18.1.0=py36ha925a31_0
-scipy=1.3.2=py36h29ff71c_0
-setuptools=44.0.0=py36_0
-six=1.13.0=py36_0
-sqlite=3.29.0=he774522_0
-tensorboard=1.14.0=py36he3c9ec2_0
-tensorflow=1.14.0=gpu_py36h305fd99_0
-tensorflow-base=1.14.0=gpu_py36h55fc52a_0
-tensorflow-estimator=1.14.0=py_0
-tensorflow-gpu=1.14.0=h0d30ee6_0
-termcolor=1.1.0=py36_1
-tornado=6.0.3=py36he774522_0
-traitlets=4.3.3=py36_0
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.16.27012=hf0eaf9b_1
-wcwidth=0.1.7=py36h3d5aa90_0
-werkzeug=0.16.0=py_0
-wheel=0.33.6=py36_0
-wincertstore=0.2=py36h7fe50ca_0
-wrapt=1.11.2=py36he774522_0
-yaml=0.1.7=hc54c509_2
-zeromq=4.3.1=h33f27b4_3
-zlib=1.2.11=h62dcd97_3
+
+keras
+pandas
+tensorflow
+numpy
